deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: apache-deployment
 labels:
    app: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
       containers:
       - name: apache
         image: httpd:latest
         ports:
         - containerPort: 80
