deploywebsite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: website-deployment
 labels:
    app: website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
       containers:
       - name: website
         image: hemabai/imagewebsite:latest
         ports:
         - containerPort: 90
