ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress-deployment
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
     paths:
      - path: /apache
        backend:
            serviceName: apache
            servicePort: 80
      - path: /command
        backend:
            serviceName: website
            servicePort: 80
